--- a/07 - Array Cardio Day 2/index.html
+++ b/07 - Array Cardio Day 2/index.html
@@ -26,15 +26,31 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const isAdult = people.some(person => ((new Date).getFullYear()) - person.year >=19 );
+    console.log(isAdult);
     // Array.prototype.every() // is everyone 19 or older?
+    const allAdults = people.every(person => ((new Date).getFullYear()) - person.year >=19 );
+    console.log(allAdults);
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const comment = comments.find(comment => comment.id === 823423);
+    console.log(comment);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
+    const index = comments.find(comment => comment.id === 823423);
     // delete the comment with the ID of 823423
+    comments.splice(index, 1);
+
+    const newComments = [
+      ...comments.slice(0, index),
+      ...comments.slice(index + 1)
+    ];
+
+    console.table(comments);
+    console.table(newComments);
 
   </script>
 </body>
