Update day 9 and delete old file

--- a/09 - Dev Tools Domination/index.html
+++ b/09 - Dev Tools Domination/index.html
@@ -18,27 +18,25 @@
     }
 
     // Regular
-    console.log('hello');
+    console.log('hello world');
 
     // Interpolated
-    console.log('Hello I am a %s string!', '💩');
+    console.log('hello %s', 'world');
 
     // Styled
-    // console.log('%c I am some great text', 'font-size:50px; background:red; text-shadow: 10px 10px 0 blue')
+    console.log('%c hello world', 'font-size:50px');
 
     // warning!
-    console.warn('OH NOOO');
+    console.warn('hello world');
 
     // Error :|
-    console.error('Shit!');
+    console.error('hello world');
 
     // Info
-    console.info('Crocodiles eat 3-4 people per year');
+    console.info('hello world');
 
     // Testing
-    const p = document.querySelector('p');
-
-    console.assert(p.classList.contains('ouch'), 'That is wrong!');
+    console.assert(1 === 2 , 'This is false');
 
     // clearing
     console.clear();
@@ -59,22 +57,15 @@
     });
 
     // counting
-
-    console.count('Wes');
-    console.count('Wes');
-    console.count('Steve');
-    console.count('Steve');
-    console.count('Wes');
-    console.count('Steve');
-    console.count('Wes');
-    console.count('Steve');
-    console.count('Steve');
-    console.count('Steve');
-    console.count('Steve');
-    console.count('Steve');
+    console.count('hello');
+    console.count('hello');
+    console.count('hello');
+    console.count('world');
+    console.count('world');
+    console.count('world');
 
     // timing
-    console.time('fetching data');
+        console.time('fetching data');
     fetch('https://api.github.com/users/wesbos')
       .then(data => data.json())
       .then(data => {
@@ -82,6 +73,7 @@
         console.log(data);
       });
 
+    //table
     console.table(dogs);
 
   </script>
