--- a/13 - Slide in on Scroll/index.html
+++ b/13 - Slide in on Scroll/index.html
@@ -59,11 +59,22 @@
     }
 
   const sliderImages = document.querySelectorAll('.slide-in');
-  function checkSlide(){
-    sliderImages.forEach(sliderImage => {
-      console.log(sliderImage.offsetTop);
-  });
-}
+    function checkSlide() {
+      sliderImages.forEach(sliderImage => {
+        // half way through the image
+        const slideInAt = (window.scrollY + window.innerHeight) - sliderImage.height / 2;
+        // bottom of the image
+        const imageBottom = sliderImage.offsetTop + sliderImage.height;
+        const isHalfShown = slideInAt > sliderImage.offsetTop;
+        const isNotScrolledPast = window.scrollY < imageBottom;
+        if (isHalfShown && isNotScrolledPast) {
+          sliderImage.classList.add('active');
+        } else {
+          sliderImage.classList.remove('active');
+        }
+      });
+    }
+
 
 window.addEventListener('scroll', debounce(checkSlide));
 
